Working UI, working new item import, working status table after import. working on making number of items to import variable next.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yajra/laravel-datatables-html": "*",
         "yajra/laravel-datatables-oracle": "*",
         "yajra/laravel-datatables-buttons": "*",
-        "ext-simplexml": "*"
+        "ext-simplexml": "*",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
